# Sangeet

./: audio-data-music-genre-classification.ipynb  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/sangeet/: MainActivity.kt  UserSettingsSerializer.kt
app/src/main/java/com/example/sangeet/dataClasses/: Artists.kt  Moods.kt  SignInResult.kt  SignInState.kt  Song.kt  User.kt  UserData.kt  coverArt.kt
app/src/main/java/com/example/sangeet/di/: Firebase.kt  application.kt
app/src/main/java/com/example/sangeet/exoplayer/: MusicService.kt
app/src/main/java/com/example/sangeet/modifierExtension/: modifierExtension.kt
app/src/main/java/com/example/sangeet/onboardingPages/: firstPage.kt  secondPage.kt
app/src/main/java/com/example/sangeet/repositry/: GoogleAuthClient.kt  HomeScreenRepo.kt  Users.kt  onboarding.kt  repo.kt
app/src/main/java/com/example/sangeet/screens/: HomeScreen.kt  MoodsSelect.kt  Player.kt  dummyHomeScreen.kt
app/src/main/res/drawable/: sangeet_high_resolution_logo.xml  sangeet_high_resolution_logo_black.xml  sangeet_high_resolution_logo_black_transparent.xml  sangeet_high_resolution_logo_blue_transparent.xml  sangeet_high_resolution_logo_white.xml  sangeet_high_resolution_logo_white_transparent.xml
app/src/main/res/raw/: sangeet_splash_screen.json
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
